# brainfuck-asmjit

./: CMakeLists.txt  LICENSE.md  README.md
bf/: CMakeLists.txt  main.cpp
bf/res/: simple.bf
